<resources>
    <string name="app_name">YiKeApp</string>
    <string name="service_and_privacy"><![CDATA[《服务&隐私条款》]]></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_home">首页</string>
    <string name="tab_community">交流</string>
    <string name="tab_notifications">消息</string>
    <string name="tab_user">我的</string>
    <string name="bnb_host">掌柜：</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">扫一扫</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="experience_share">经验分享</string>
    <string name="partner">约伴同行</string>
    <string name="question">互助问答</string>
    <string name="yike_diary">义客日记</string>
    <string name="collect">收藏</string>
    <string name="textDemo_1">非985、211的本二学生怎样才能尽快提升自己并去英国留学？</string>
    <string name="textDemo_2">你需要根据你自身的情况才能做进一步的选择和规划。虽然你的学校优势不大，但可以通过gpa</string>
    <string name="textDemo_3">美国</string>
    <string name="textDemo_4">2017.08.09</string>
    <string name="textDemo_5">2367赞</string>
    <string name="slogan">YiKe</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="description_start">img_start_header</string>
    <string name="online_reserve">线上预约</string>
    <string name="collection">收藏</string>
    <string name="diary">日记</string>
    <string name="activities">活动</string>
    <string name="follow">关注</string>
    <string name="resume">简历</string>
    <string name="information">资料</string>
    <string name="creditValue">信用值</string>
    <string name="title_activity_settings">设置</string>
    <string name="store_time">旅行时间</string>
    <string name="store_dura">时长</string>
    <string name="store_volun_needed_header">人数</string>
    <string name="store_intro">青旅介绍:</string>
    <string name="store_volun_needed_detail">义工数量:</string>
    <string name="store_volun_requ">义工要求:</string>
    <string name="store_work_content">工作内容:</string>
    <string name="store_other">其他:</string>
    <string name="store_more_info">青旅更多信息:</string>
    <string name="store_time_with_colon">青旅旅行时间:</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login_chinese">登录</string>
    <string name="login_tab_title">登录义客</string>
    <string name="contact_store">咨询店家</string>

    <string name="service_rule">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t“义客APP”服务条款\n
 \t\t使用本APP的所有功能之前，请您务必仔细阅读本《服务条款》，确保您充分理解并选择接受或不接受本条款。当您勾选“我已了解并接受《服务条款》并点击【立即注册】按钮注册成功后，本条款即构成了对双方具有法律约束力的文件。\n\n

一、账号注册\n
\t\t1、用户在使用本平台前需要注册一个“义客APP”账号，“义客APP”账号应当使用手机号码绑定注册，一个手机号码只可绑定注册一个账号。义客APP可以根据用户需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知用户。\n
\t\t2、在注册过程中，您必须提供准确完整的信息，且您的个人资料信息应保持最新状态。\n
\t\t3、请确认，在您完成注册程序或以其他义客允许的方式实际使用义客平台服务时，您应当是具备相应权利能力和行为能力，能够独立承担法律责任的公民。任何未满18周岁的未成年人参加网上活动应事先取得其监护人可经查证的同意并遵守《青少年网络文明公约》。\n
\t\t4、“义客APP”是基于义工招募和申请服务的APP产品，用户注册时应当授权义客APP公开及使用其个人信息方可成功注册“义客APP”账号。故用户完成注册即表明用户同意义客提取、公开及使用用户的信息。义客对这些信息的公开及使用将受限于第二条用户个人隐私信息保护的约束。\n
\t\t5、您对您的义客账号和密码的安全负责，若发现任何非法使用用户账号或安全漏洞的情况，请立即联系义客相关工作人员。\n
\t\t6、在用户注册及使用本平台时，义客需要搜集能识别用户身份的个人信息以便义客可以在必要时联系用户，或为用户提供更好的使用体验。义客搜集的信息包括但不限于用户的姓名、联系地址；义客对这些信息的使用将受限于第二条用户个人隐私信息保护的约束。\n\n

        二、用户个人隐私信息保护\n
\t\t1、义客保证不对外公开或向第三方提供单个用户的注册资料及用户在使用服务时存储在义客平台中受法律保护的隐私等个人信息，但下列情况除外：\n
\t\t\t（1）事先征得用户的同意，如当用户授权第三方软件或网站访问其义客账户、当用户授权义客将其义工个人简历推送给合适店家时；\n
\t\t\t（2）完成义工体验后，义工与店家相互做出的评价与评分，将显示在用户公开个人资料页面；\n
\t\t\t（3）依据有关的法律法规要求；\n
\t\t\t（4）按照相关政府主管部门的要求；\n
\t\t\t（5）依据法院的生效判决、裁定或命令；\n
\t\t\t（6）为维护义客的合法权益或社会公共利益而在相关行政程序或司法程序向政府主管部门或法院提供。\n
\t\t2、如果义客发现或收到他人举报或投诉用户违反本协议约定的，义客有权不经通知随时对相关内容，包括但不限于用户资料、发帖记录进行审查、删除，并视情节轻重对违规账号处以包括但不限于警告、账号封禁、设备封禁、功能封禁的处罚，且通知用户处理结果。\n
\t\t3、因违反服务条款被封禁的用户，可以自行与义客联系。其中，被实施功能封禁的用户会在封禁期届满后自动恢复被封禁功能。被封禁用户可提交申诉，义客将对申诉进行审查，并自行合理判断决定是否变更处罚措施。\n
\t\t4、用户理解并同意，义客有权依合理判断对违反有关法律法规或本协议规定的行为进行处罚，对违法违规的任何用户采取适当的法律行动，并依据法律法规保存有关信息向有关部门报告等，用户应承担由此而产生的一切法律责任。\n
\t\t5、用户理解并同意，因用户违反本协议约定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户应当赔偿义客与合作公司、关联公司，并使之免受损害。\n\n

 三、用户发布内容规范\n
\t\t1、本条所述内容是指用户使用义客的过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于账号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用账号或本平台所产生的内容。\n
\t\t2、用户不得利用“义客APP”账号或本平台制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容：\n
    \t\t\t(1) 反对宪法所确定的基本原则的；\n
    \t\t\t(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n
    \t\t\t(3) 损害国家荣誉和利益的；\n
    \t\t\t(4) 煽动民族仇恨、民族歧视，破坏民族团结的；\n
    \t\t\t(5) 破坏国家宗教政策，宣扬邪教和封建迷信的；\n
    \t\t\t(6) 散布谣言，扰乱社会秩序，破坏社会稳定的；\n
    \t\t\t(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；\n
    \t\t\t(8) 侮辱或者诽谤他人，侵害他人合法权益的；\n
    \t\t\t(9) 含有法律、行政法规禁止的其他内容的信息。\n
    \t\t3、用户不得利用“义客APP”账号或本平台制作、上载、复制、发布、传播如下干扰“义客APP”正常运营，以及侵犯其他用户或第三方合法权益的内容：\n
    \t\t\t(1) 含有任何性或性暗示的；\n
    \t\t\t(2) 含有辱骂、恐吓、威胁内容的；\n
    \t\t\t(3) 含有骚扰、垃圾广告、恶意信息、诱骗信息的；\n
    \t\t\t(4) 涉及他人隐私、个人信息或资料的；\n
    \t\t\t(5) 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的；\n
\t\t\t(6) 含有其他干扰本平台正常运营和侵犯其他用户或第三方合法权益内容的信息。\n\n

四、使用规则\n
    \t\t1、用户在本平台中或通过本平台所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表义客的观点、立场或政策，义客对此不承担任何责任。\n
    \t\t2、用户不得利用“义客APP”账号或本平台进行如下行为：\n
    \t\t\t(1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的；\n
    \t\t\t(2) 强制、诱导其他用户关注、点击链接页面或分享信息的；\n
    \t\t\t(3) 虚构事实、隐瞒真相以误导、欺骗他人的；\n
    \t\t\t(4) 利用技术手段批量建立虚假账号的；\n
    \t\t\t(5) 利用“义客APP”账号或本平台从事任何违法犯罪活动的；\n
    \t\t\t(6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；\n
    \t\t\t(7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰“义客APP”正常运营或义客未明示授权的行为。\n
    /t/t3、用户须对利用“义客APP”账号或本平台传送信息的真实性、合法性、无害性、准确性、有效性等 全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与义客无关。如因此给义客或第三方造成损害的，用户应当依法予以赔偿。\n
\t\t4、义客提供的服务中可能包括广告，用户同意在使用过程中显示义客和第三方供应商、合作伙伴提供的广告。除法律法规明确规定外，用户应自行对依照该广告信息进行的交易负责，对用户因依照该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，义客不承担任何责任。\n\n

五、服务费\n
\t\t1、义客可以以使用义客平台为对价向用户收取费用，称为服务费。\n
\t\t服务费适用条件及计算方法如下：\n
\t\t\t（1）保证金：用户为店家与义工双方有更好的服务体验而需缴纳的一笔可退还的款项。\n
\t\t\ta.店家保证金：店家在签署入驻合同前，需要充值499元人民币作为保证金；\n
\t\t\tb.义工保证金：义工与店家成功签订合约时，义工需在签订完成三天内交付99元人民币作为保证金；\n
\t\t\tc.退还说明：若义工与店家在合同规定时期内无违约，则项目结束后可随时退回保证金；\n
\t\t\td.扣费情况说明：若义工与店家在合同规定时期内违约，则按违约行为严重性相应扣除保证金。金额如下：\n
\t\t\t\t\t用户类型	\t\t\t\t\t\t\t违约行为	\t\t\t\t\t\t\t\t\t\t\t扣除金额\n
\t\t\t\t\t\t义工	\t\t\t\t\t\t\t\t\t\t消极工作	\t\t\t\t\t\t\t\t\t\t\t\t\t10元\n
\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t	临时放鸽子\t\t\t\t\t\t\t\t\t\t\t\t	10元\n
\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t	换宿中途退出	\t\t\t\t\t\t\t\t\t\t15元\n
\t\t\t\t\t\t店家	\t实际与发布的内容差距过于悬殊	\t10元\n
\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t	强迫产生额外费用\t\t\t\t\t\t\t	10元\n
\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t	强迫超工时用工\t\t\t\t\t\t\t\t	15元\n\n

\t\t\t（2）招聘信息发布与推广费：\n
\t\t\ta.店家在平台发布招聘消息时需要交付的费用，为9.9元人民币/则；\n
\t\t\tb.若店家遇到紧急招募等情况，需要置顶招募信息或将招募信息置于信息发布区顶部时，需缴纳招聘信息推广费，申请招聘信息置顶。\n
\t\t\t招聘信息推广费依据信息置顶的时长进行收费。收费标准如下：\n
\t\t\t置顶时长\t\t\t\t收费标准	\n\t\t\t12小时以内	\t\t500元\n
\t\t\t	一天	\t\t\t\t\t\t\t\t900元\n
\t\t\t	三天\t\t\t\t	\t\t\t\t\t2300元\n
\t\t\t	五天\t\t	\t\t\t\t\t\t\t3500元\n
\t\t\t	一周	\t\t\t\t\t\t\t\t4600元\n\n

\t\t\t（3）广告费：义客APP内设置两个广告区域：应用启动页广告区、首页顶部幻灯片区。\n
\t\t\t店家可在APP内广告板块付费租用宣传区域，依据区域不同、流量总额不同设置梯级收费。\n
\t\t\t收费标准：\n
\t\t\t广告种类	\t\t\t每千人浏览单价/元	\t\t\t轮刷	\t\t\t结算方式\n
\t启动页3秒动态广告	\t\t\t\t200	\t\t\t\t\t\t\t\t1/3	\t\t\t\t\t\t月结\n
\t启动页2秒静态广告	\t\t\t\t160	\t\t\t\t\t\t\t\t1/3    \t\t\t\t\t\t月结\n
\t首页顶部幻灯片广告	\t\t\t120	\t\t\t\t\t\t\t\t1/4    \t\t\t\t\t\t月结\n\n

\t\t2、任何适用的服务费（包括任何适用的税费）将于发布或申请服务项目前显示给用户。义客保留随时变更服务费的权利，并且我们将在变更生效前向会员提供关于任何费用变更的充分通知。\n\n

六、仅适用于店家的条款\n
\t\t1、在义客平台创建义工招募项目时，您必须\n
\t\t\t（1）提供店主身份证及营业执照等，并接受义客团队的到店审核；\n
\t\t\t（2）提供关于招募项目的准确完整信息（例店家位置、项目描述等）；\n
\t\t\t（3）披露对于义工的相关限制及要求（例如年龄、性别、健康状况等）；\n
\t\t\t（4）使用图片、视频等准确反映店家条件；\n
\t\t\t（5）缴纳相应的发布费和保证金（具体数额详见服务费页面）。\n
\t\t2、在您确认招募义工时，您即与义工订立具有法律约束力的协议，并按照招募要求提出时您的项目描述向义工提供您的服务。在协议时间内，不得违约，否则将视情节严重性扣除相应保证金和信用分。若无违约现象，项目结束时可全额退还保证金。\n\n

七、仅适用于义工的条款\n
\t\t1、 在申请任何义工项目前，您必须完善个人简历并完成身份证实名制验证。\n
\t\t2、在符合店家设定的任何要求的情况下，您可以按照相应申请流程申请义客平台上的可选义工项目。\n
\t\t3、在店家通过您的申请并确认招募时，您需缴纳保证金（具体数额详见服务费页面），同时与店家订立具有法律约束力的协议，并按照招募要向店家提供您的服务。在协议时间内，不得违约，否则将视情节严重性扣除相应保证金。若无违约现象，项目结束时可全额退还保证金。\n\n

八、信息内容的所有权\n
\t\t义客平台定义的信息内容包括：文字、声音、图片、视频；在广告中的全部内容；本平台为用户提供的其他信息。所有内容受版权、商标、标签和其它财产所有权法律或知识产权相关法律的保护。所以，用户只能在义客和广告商授权下才能使用这些内容，而不能擅自复制、再造这些内容、或与内容有关的派生产品。\n\n

九、免责声明\n
\t\t1、如您选择使用义客平台或集体内容，您将被视为自愿作出选择并应自行承担风险。义客平台和集体内容“按原样”提供，不附带任何种类的明示或默示保证。\n
\t\t2、您承认，您已获机会充分研究可能适用于您的项目的法律、规则或条例，且不依、赖义客所作的有关服务项目的任何法律或事实陈述。\n
\t\t3、如果我们决定对任何用户进行身份确认或背景调查，在适用法律允许的范围内，我们拒绝以任何明示或默示的形式保证调查将发现用户先前的不当行为，或担保用户未来不会从事不当行为。\n
\t\t4、您承认，一些体验、活动可能具有内在风险，参与这些项目，您即选择自愿承担相应风险。例如，一些项目提供者的项目可能存在疾病、身体受伤、残疾或死亡风险，您决定参与这些项目，即表示完全自愿承担这些风险。对于您在参与义工项目之前、期间和之后所作的决定，您将承担全部责任。\n
\t\t5、前述免责条款在法律允许的最大限度内适用。您可享有其他法定权利。但是，法定保证（如有）的期限不得超出法律允许的最长期限。\n\n

十、其他\n
\t\t    1、义客郑重提醒用户注意本协议中免除义客责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。\n
\t\t    2、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和义客之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交义客开发团队住所地有管辖权的人民法院管辖。\n
\t\t    3、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。\n
\t\t4、本协议最终解释权归义客所有，义客保留随时根据本条协议变更本《服务条款》的权利。如果我们变更本《服务条款》，我们将在义客平台上发布更新后的《服务条款》，并在《服务条款》顶端注明“最后变更日期”。如果您不同意更改后的《服务条款》，您可终止本协议，即刻生效并停止使用义客的所有服务。\n\n
    </string>
    <string name="my_store">我的民宿</string>
    <string name="like">点赞</string>

    <string-array name="option_message">
        <item>删除该聊天</item>
    </string-array>

</resources>
