<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.carson.yikeapp.Views.Home.HomeActivity">
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_maximize"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="always" />

    <item
        android:title="@string/my_store"
        android:id="@+id/action_my_store"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
    <item
        android:title="Edit"
        android:id="@+id/action_publish"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit_2"/>

</menu>