<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.carson.yikeapp.Views.Home.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            app:title=" "
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        app:tabIndicatorHeight="0dp"
        app:tabTextColor="@android:color/black"
        app:tabSelectedTextColor="@color/bg_bnb_loca"
        android:layout_width="match_parent"
        android:layout_height="48.5dp"
        app:tabGravity="fill">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_home_selector"
            android:text="@string/tab_home" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:icon="@drawable/tab_discuss_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_community" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_message_selector"
            android:text="@string/tab_notifications" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tab_user_selector"
            android:text="@string/tab_user" />

    </android.support.design.widget.TabLayout>

</LinearLayout>
