<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.carson.yikeapp.Views.StoreDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_store_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_store_detail"
            android:layout_width="match_parent"
            app:navigationIcon="@drawable/ic_back_black"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/title"
                android:text="义客"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appbar_store_detail"
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_above="@+id/bottom_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/iv_store_photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/iv_store_photo"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_store_time_header"
                        android:text="11"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/store_time"
                        android:textColor="#999999"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_store_duration_header"
                        android:text="1099"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/store_dura"
                        android:textColor="#999999"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_store_volun_needed_header"
                        android:text="1099"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/store_volun_needed_header"
                        android:textColor="#999999"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_intro"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_intro_content"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="随着国内、外的升学管道的日益增长，对于升学的选择像是面对着百货公司里琳琅满目的产品，随之而起的是各种各样的教育资讯展。"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_volun_needed_detail"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_volun_needed"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="1人"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_volun_requ"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_volun_requ"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="勤劳靠谱就好，无性别要求"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_work_content"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_work_content"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="前台值班，办理入住\n工作时间：3-4小时"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_time_with_colon"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_time_detail"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="最低一个月\n7-8月最好"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_other"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_other"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="无"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/store_more_info"
                        android:textSize="16.3sp"
                        android:textColor="@color/bg_bnb_loca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_store_more_info"
                        android:textColor="@android:color/black"
                        android:textSize="16.3sp"
                        android:text="无"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:id="@+id/bottom_options"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="fill"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_store_detail_apply"
            android:text="报名"
            android:textSize="13.7sp"
            android:textColor="@color/bg_bnb_loca"
            android:background="@android:color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_store_detail_contact"
            android:text="@string/contact_store"
            android:textSize="13.7sp"
            android:textColor="@android:color/darker_gray"
            android:background="@android:color/white"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
